# yt-dlp-soundcloud-drm

./: README.md  pyproject.toml
yt_dlp_plugins/extractor/: soundcloud_drm.py
yt_dlp_plugins/postprocessor/: mp4decrypt.py
